<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RemixThem</string>

    <string name="activity_remix">RemixThem Remix</string>
    <string name="activity_mix">RemixThem Mix</string>
    <string name="activity_gallery">RemixThem Gallery</string>
    <string name="activity_manual">RemixThem Manual selection</string>
    
    <string name="ok">OK</string>   
    <string name="cancel">Cancel</string>    
    
    <string name="hello_editor_remix">Hello\nStart by selecting a picture of a friend\'s face.</string>
    <string name="picture_take">New picture</string>
    <string name="picture_load">Existing image</string>
    <string name="picture_contact">Contact picture</string>
    <string name="hello_editor_mix">Hello\nStart by selecting a picture of a first friend\'s face.</string>
    <string name="new_picture_editor">Great!\nI\'ve got the first face, now select the second one please.</string>

    <string name="operation_cancelled">Operation cancelled by the user</string>
        
    <string name="nofacedetected">Sorry,</string>
    <string name="nofacedetected_message">I couldn\'t find a face in your picture.\nYou should try to take a new one or to use the manual mode.</string>
    <string name="nocontactfacedetected_message">I couldn\'t find a picture for this contact.\nYou should try to pick another one.</string>

    
    <string name="takepicture">Take a picture of friend\'s face</string>
    <string name="contactnosearch">Select a contact.\nProblem when using the \"Search\" button</string>
    
    <string name="saved">Image saved</string>    
    
    <string name="BTN_cheatcode">Cheat Code</string>
    
    <string name="BTN_change">Change</string>
    <string name="BTN_edit">Edit</string>
    <string name="BTN_ugly">Ugly</string>
    <string name="BTN_reset">Reset</string>
    <string name="BTN_mix">Mix</string>
    <string name="BTN_done">Save</string>
    <string name="BTN_send">Share</string>
    <string name="BTN_remixfriend">Edit a friend</string>
    <string name="BTN_mixfriends">Mix friends</string>
    <string name="BTN_gallery">Gallery</string>
    <string name="BTN_manual">Manual</string>

    <string name="TITLE_edit">RemixThem Edit Mode</string>
    <string name="TITLE_change">RemixThem Change Mode</string>

    <string name="ERROR_bitmap_null">No picture provided</string>
    
    <string name="email_subject">RemixThem</string>
    <string name="email_body">Made using the RemixThem application on my Android phone.\nhttp://remixthem.steren.fr</string>
    
    <string name="manual_pick_eye">Touch the left eye.</string>
    <string name="manual_first_eye">Left eye saved. Now touch the right eye.</string>
    <string name="manual_second_eye">Right eye saved. Menu > OK to finish.</string>
    <string name="manual_not_valid_eye2">Second eye must be on the right of the first one.</string>
    <string name="manual_OK">OK</string>
    <string name="please_2_eyes">The two eyes have not been selected</string>
        
	<string name="entercheatcode">Enter your promotional code:</string>
	<string name="press_menu_for_option">Open Menu for more options</string>
	
	<string name="BTN_buy">Adopt me</string>
    <string name="BTN_buy_mix">Mix two faces in one.\nOnly in Full version.</string>
    <string name="BTN_buy_gallery">Access to your saved faces.\nOnly in Full version.</string>
    <string name="BTN_buy_save">Save your mix.\nOnly in Full version.</string>
    <string name="BTN_buy_send">Send your image via e-mail, Text or Facebook.\nOnly in Full version.</string>
    <string name="BTN_buy_load">Start from a picture stored on your device.\nOnly in Full version.</string>
    <string name="BTN_buy_contact">Start from a contact picture.\nOnly in Full version.</string>
    
	
</resources>
