<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView android:id="@+id/hello_editor_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Hello" />

    <Button android:id="@+id/button_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_take" />

    <Button android:id="@+id/button_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_load" />
            
    <Button android:id="@+id/button_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_contact" />



</LinearLayout>
